syntax = "proto3";
package mainchain.enterprise.v1;

import "mainchain/enterprise/v1/enterprise.proto";
import "cosmos_sdk/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/unification-com/mainchain/x/enterprise/types";

// GenesisState defines the enterprise module's genesis state.
message GenesisState {
  // params defines all the paramaters of the module.
  Params params = 1 [(gogoproto.nullable) = false];
  uint64 starting_purchase_order_id = 2;
  repeated EnterpriseUndPurchaseOrder purchase_orders = 3 [(gogoproto.castrepeated) = "EnterpriseUndPurchaseOrders", (gogoproto.nullable) = false];
  repeated LockedUnd locked_und = 4 [(gogoproto.castrepeated) = "LockedUnds", (gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin total_locked = 5 [(gogoproto.nullable) = false];
  repeated string whitelist = 6 [(gogoproto.castrepeated) = "Whitelists"];
}
